--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "async": "^2.5.0",
     "bufferhelper": "^0.2.1",
     "cheerio": "^0.22.0",
+    "chinese-whispers": "^0.2.11",
+    "corenlp": "^1.5.2",
     "eventproxy": "^0.3.5",
     "express": "^4.15.3",
     "http": "0.0.1-security",
     "iconv-lite": "^0.4.15",
     "mysql": "^2.13.0",
+    "n3": "^1.16.4",
+    "neo4j-driver": "^5.7.0",
+    "nodejieba": "^2.6.0",
     "request": "^2.81.0",
     "superagent": "^3.5.2",
     "superagent-charset": "^1.2.0",
