--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "n3": "^1.16.4",
     "neo4j-driver": "^5.7.0",
     "nodejieba": "^2.6.0",
+    "puppeteer": "^19.8.3",
     "request": "^2.81.0",
     "superagent": "^3.5.2",
     "superagent-charset": "^1.2.0",
